--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.6.0
 anyio==3.7.1
+async-timeout==4.0.3
 click==8.1.7
 dnspython==2.4.2
 email-validator==2.0.0.post2
@@ -18,7 +19,9 @@ pydantic_core==2.10.1
 PyJWT==2.8.0
 python-decouple==3.8
 python-dotenv==1.0.0
+python-multipart==0.0.6
 PyYAML==6.0.1
+redis==5.0.1
 sniffio==1.3.0
 SQLAlchemy==2.0.22
 starlette==0.27.0
